-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Reviewing https://review.whamcloud.com/#/c/29818/ I noticed that errors are not being propagated to changelog readers. I suggest that crs_err be changed to int and the errno associated to any errors encountered be stored there. Then this value can be used in chlg_read() if no records were emitted. Also the return value of chld_load() will also be the return value of kthread_stop() in chlg_release(). clhg_release() should save and return any errors there too.
- is related to
-
LU-10379 "lfs changelog" generates constant "Changelog: Input/output error" errors
-
- Resolved
-